--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -11,18 +11,27 @@
   <script defer src="./../../assets/js/restaurant/restaurantDetail.js"></script>
 </head>
 <body>
+  <!-- 헤더 -->
   <div id="header"></div>
+  <!-- 메인 -->
   <main>
+    <!-- 메인 바디 -->
     <div class="main_body">
+      <!-- 페이지 타이틀 -->
       <p id="page_title">
         식당 이름
       </p>
+      <!-- 페이지 내용 영역 -->
       <div class="context">
+        <!-- 음식점 소개 영역 -->
         <div class="detail_info_area">
+          <!-- 음식점 이미지 -->
           <div class="restaurant_img_box">
             <img id="restaurant_img" src="./../../assets/img/restaurant/re1.jpg">
           </div>
+          <!-- 음식점 소개 영역 -->
           <div class="restaurant_info">
+            <!-- 음식점 정보 -->
             <div class="short_info">
               <h1 id="short_name">
                 자담치킨
@@ -40,6 +49,7 @@
                 · 경사로 유무 : O
               </p>
             </div>
+            <!-- 음식점 설명 -->
             <div class="restaurant_introduction">
               <p id="introduction">
                 서초 방배 1동 자담치킨입니다.
@@ -50,7 +60,9 @@
             </div>
           </div>
         </div>
+        <!-- 지도 영역 -->
         <div class="detail_map_area">
+          <!-- 지도 이미지 -->
           <div class="map_img_box">
             <img class="map_img" src="./../../assets/img/restaurant/map.PNG">
           </div>
@@ -58,6 +70,7 @@
       </div>
     </div>
   </main>
+  <!-- 푸터 -->
   <div id="footer"></div>
 </body>
 </html> 
