--- a/webapp/footer.html
+++ b/webapp/footer.html
@@ -1,27 +1,33 @@
 <footer id="site-footer">
   <div class="footerDiv">
+    <!-- 기관(학원) 정보 리스트 -->
     <ul>
+      <!-- 전화번호 -->
       <li>
         <p>
           전화번호 : 02-538-0021
         </p>
       </li>
+      <!-- 주소 -->
       <li>
         <p>
           주소 : 서울특별시 강남구 테헤란로 146 현익빌딩 3,4층
         </p>
       </li>
+      <!-- 시설명 -->
       <li>
         <p>
           직업훈련시설명 : 코리아IT아카데미
         </p>
       </li>
+      <!-- 이메일 -->
       <li>
         <p>
           E-mail : tegongmang22 koreaedugroup.com
         </p>
       </li>
     </ul>
+    <!-- 저작권 기호 -->
     <span>
       ⓒ RB
     </span>
