--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,21 +1,30 @@
 <header id="site_header_login">
+  <!-- 헤더 윗 줄 -->
   <div>
+    <!-- 헤더 윗 줄 왼쪽 -->
     <span>
+      <!-- 로고 -->
       <a href="./../../main.html">
         <img src="./../../assets/img/main/logoP.png">
       </a>
     </span>
+    <!-- 헤더 윗 줄 오른쪽 -->
     <span>
+      <!-- 마이페이지 메뉴-->
       <a href="./../myPageNormal/normalPwCheck.html">
         마이페이지
       </a>
+      <!-- 로그아웃 메뉴 -->
       <a href="./../../main.html">
         로그아웃
       </a>
     </span>
   </div>
+  <!-- 네비게이션 -->
   <nav>
+    <!-- 네비게이션 메뉴 리스트 -->
     <ul>
+      <!-- 지도메뉴 -->
       <li>
         <div>
           <a href="./../map/map.html">
@@ -30,6 +39,7 @@
           </a>
         </div>
       </li>
+      <!-- 음식점 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../restaurant/restaurant.html">
@@ -37,6 +47,7 @@
           </a>
         </div>
       </li>
+      <!-- 뉴스 게시판 메뉴 -->
       <li>
         <div>
           <a href="./../news/news.html">
@@ -44,6 +55,7 @@
           </a>
         </div>
       </li>
+      <!-- 일반 게시판 메뉴 -->
       <li>
         <div>
           <a href="./../post/postMain.html">
@@ -51,6 +63,7 @@
           </a>
         </div>
       </li>
+      <!-- 돌봄 회원 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../careMember/careMember.html">
