--- a/webapp/header_main_login.html
+++ b/webapp/header_main_login.html
@@ -1,21 +1,30 @@
 <header id="site_header">
+  <!-- 헤더 윗 줄 -->
   <div>
+    <!-- 헤더 윗 줄 왼쪽 메뉴 -->
     <span>
+      <!-- 로고 -->
       <a href="./main.html">
         <img src="./assets/img/main/logoP.png">
       </a>
     </span>
+    <!-- 헤더 윗 줄 오른쪽 메뉴 -->
     <span>
+      <!-- 마이페이지 메뉴 -->
       <a href="./app/myPageCare/carePwCheck.html">
         마이페이지
       </a>
+      <!-- 로그아웃 메뉴 -->
       <a href="./main.html">
         로그아웃
       </a>
     </span>
   </div>
+  <!-- 네비게이션 -->
   <nav>
+    <!-- 네비게이션 메뉴 목록 -->
     <ul>
+      <!-- 지도 메뉴 -->
       <li>
         <div>
           <a href="./app/map/map.html">
@@ -23,6 +32,7 @@
           </a>
         </div>
       </li>
+      <!-- 지하철 노선도 메뉴 -->
       <li>
         <div>
           <a href="./app/subwayLine/subway.html">
@@ -30,6 +40,7 @@
           </a>
         </div>
       </li>
+      <!-- 음식점 리스트 메뉴 -->
       <li>
         <div>
           <a href="./app/restaurant/restaurant.html">
@@ -37,6 +48,7 @@
           </a>
         </div>
       </li>
+      <!-- 뉴스 게시판 메뉴 -->
       <li>
         <div>
           <a href="./app/news/news.html">
@@ -44,6 +56,7 @@
           </a>
         </div>
       </li>
+      <!-- 일반 게시판 메뉴 -->
       <li>
         <div>
           <a href="./app/post/postMain.html">
@@ -51,6 +64,7 @@
           </a>
         </div>
       </li>
+      <!-- 돌봄 회원 리스트 메뉴 -->
       <li>
         <div>
           <a href="./app/careMember/careMember.html">
