--- a/webapp/main.html
+++ b/webapp/main.html
@@ -12,129 +12,103 @@
 
 </head>
 <body>
+  <!-- 헤더 -->
   <div id="header"></div>
+  <!-- 메인 -->
   <main>
+    <!-- 메인 바디 -->
     <div class="main_body">
+      <!-- 뉴스 배너 영역 -->
       <div class="news_banner">
         <!-- 여기부터 슬라이드 박스 -->
         <ul class="slide-box">
-          <li>
-            <div class="slide-img">1</div>
-          </li>
-          <li>
-            <div class="slide-img">2</div>
-          </li>
-          <li>
-            <div class="slide-img">3</div>
-          </li>
-          <li>
-            <div class="slide-img">4</div>
-          </li>
-          <li>
-            <div class="slide-img">5</div>
-          </li>
-          <li>
-            <div class="slide-img">6</div>
-          </li>
+          <!-- 첫 번째 슬라이드 -->
+          <li><div class="slide-img">1</div></li>
+          <!-- 두 번째 슬라이드 -->
+          <li><div class="slide-img">2</div></li>
+          <!-- 세 번째 슬라이드 -->
+          <li><div class="slide-img">3</div></li>
+          <!-- 네 번째 슬라이드 -->
+          <li><div class="slide-img">4</div></li>
+          <!-- 다섯 번째 슬라이드 -->
+          <li><div class="slide-img">5</div></li>
+          <!-- 여섯 번째 슬라이드 -->
+          <li><div class="slide-img">6</div></li>
         </ul>
-        <!-- 슬라이드 박스 끝 -->
       </div>
+       <!-- 추천 활동 및 추천 게시물 영역 -->
       <div class="recommend">
+        <!-- 추천활동 박스 -->
         <div class="recommend_activity">
-          <div class="recommend_title">
-            오늘의 추천활동
-          </div>
+          <!-- 추천활동 타이틀 -->
+          <div class="recommend_title">오늘의 추천활동</div>
+          <!-- 추천활동 목록 -->
           <ul class="recommend_activiies">
-            <li>
-              <a href="https://www.sac.or.kr/site/main/home">
-                예술의 전당
-              </a>
-            </li>
-            <li>
-              <a href="https://www.gugak.go.kr/site/main/index001">
-                국립국악원
-              </a>
-            </li>
+            <li><a href="https://www.sac.or.kr/site/main/home">예술의 전당</a></li>
+            <li><a href="https://www.gugak.go.kr/site/main/index001">국립국악원</a></li>
           </ul>
         </div>
+        <!-- 게시물 추천 박스 -->
         <div class="recommend_board">
-          <div class="recommend_title">
-            게시판
-          </div>
+          <!-- 추천 박스 타이틀 -->
+          <div class="recommend_title">게시판</div>
+          <!-- 추천 게시물 목록 -->
           <ul class="board_list">
+            <!-- 추천 게시물 1 -->
             <li>
+              <!-- 게시물 정보 -->
               <a href="./app/post/postDetaillogin.html">
-                <span class="board_list_number">
-                  1
-                </span>
-                <span class="board_list_title">
-                  안녕하세요
-                </span>
-                <span class="board_list_author">
-                  아무개
-                </span>
-                <span class="board_list_date">
-                  2025-08-02
-                </span>
+                <span class="board_list_number">1</span>
+                <span class="board_list_title">안녕하세요</span>
+                <span class="board_list_author">아무개</span>
+                <span class="board_list_date">2025-08-02</span>
               </a>
             </li>
+            <!-- 추천 게시물 2 -->
             <li>
+              <!-- 게시물 정보 -->
               <a href="./app/post/postDetaillogin.html">
-                <span class="board_list_number">
-                  1
-                </span>
-                <span class="board_list_title">
-                  안녕하세요
-                </span>
-                <span class="board_list_author">
-                  아무개
-                </span>
-                <span class="board_list_date">
-                  2025-08-02
-                </span>
+                <span class="board_list_number">1</span>
+                <span class="board_list_title">안녕하세요</span>
+                <span class="board_list_author">아무개</span>
+                <span class="board_list_date">2025-08-02</span>
               </a>
             </li>
+            <!-- 추천 게시물 3 -->
             <li>
+              <!-- 게시물 정보 -->
               <a href="./app/post/postDetaillogin.html">
-                <span class="board_list_number">
-                  1
-                </span>
-                <span class="board_list_title">
-                  안녕하세요
-                </span>
-                <span class="board_list_author">
-                  아무개
-                </span>
-                <span class="board_list_date">
-                  2025-08-02
-                </span>
+                <span class="board_list_number">1</span>
+                <span class="board_list_title">안녕하세요</span>
+                <span class="board_list_author">아무개</span>
+                <span class="board_list_date">2025-08-02</span>
               </a>
             </li>
+            <!-- 추천 게시물 4 -->
             <li>
+              <!-- 게시물 정보 -->
               <a href="./app/post/postDetaillogin.html">
-                <span class="board_list_number">
-                  1
-                </span>
-                <span class="board_list_title">
-                  안녕하세요
-                </span>
-                <span class="board_list_author">
-                  아무개
-                </span>
-                <span class="board_list_date">
-                  2025-08-02
-                </span>
+                <span class="board_list_number">1</span>
+                <span class="board_list_title">안녕하세요</span>
+                <span class="board_list_author">아무개</span>
+                <span class="board_list_date">2025-08-02</span>
               </a>
             </li>
           </ul>
         </div>
       </div>
+      <!-- 지도, 인기 돌봄회원 영역 시작 -->
       <div class="explore">
+        <!-- 지도 박스 -->
         <div class="explore_map">
+          <!-- 지도 이미지 -->
           <img src="./assets/img/main/map.PNG" class="map_img">
         </div>
+        <!-- 인기 돌봄회원 박스 -->
         <div class="explore_care">
+          <!-- 인기 돌봄회원 목록 -->
           <ul>
+            <!-- 인기 돌봄회원 1 -->
             <li>
               <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
@@ -143,33 +117,22 @@
                     <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
                   <span class="profile_text">
-                    <div class="profile_name">
-                      김괭이dddd
-                    </div>
-                    <div class="profile_introduction">
-                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
-                    </div>
+                    <div class="profile_name">김괭이dddd</div>
+                    <div class="profile_introduction">오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.</div>
                   </span>
                 </div>
                 <!-- 요일 -->
                 <div>
                   <ul class="day_box">
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
                   </ul>
                 </div>
               </a>
             </li>
+            <!-- 인기 돌봄회원 2 -->
             <li>
               <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
@@ -178,33 +141,22 @@
                     <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
                   <span class="profile_text">
-                    <div class="profile_name">
-                      김괭이dddd
-                    </div>
-                    <div class="profile_introduction">
-                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
-                    </div>
+                    <div class="profile_name">김괭이dddd</div>
+                    <div class="profile_introduction">오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.</div>
                   </span>
                 </div>
                 <!-- 요일 -->
                 <div>
                   <ul class="day_box">
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
                   </ul>
                 </div>
               </a>
             </li>
+            <!-- 인기 돌봄회원 3 -->
             <li>
               <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
@@ -213,33 +165,22 @@
                     <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
                   <span class="profile_text">
-                    <div class="profile_name">
-                      김괭이dddd
-                    </div>
-                    <div class="profile_introduction">
-                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
-                    </div>
+                    <div class="profile_name">김괭이dddd</div>
+                    <div class="profile_introduction">오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.</div>
                   </span>
                 </div>
                 <!-- 요일 -->
                 <div>
                   <ul class="day_box">
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
                   </ul>
                 </div>
               </a>
             </li>
+            <!-- 인기 돌봄회원 4 -->
             <li>
               <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
@@ -248,29 +189,17 @@
                     <img class="profile_pic" src="./assets/img/main/profilePicCare.png">
                   </div>
                   <span class="profile_text">
-                    <div class="profile_name">
-                      김괭이dddd
-                    </div>
-                    <div class="profile_introduction">
-                      오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.
-                    </div>
+                    <div class="profile_name">김괭이dddd</div>
+                    <div class="profile_introduction">오프라인처럼 이제 온라인 세상에서 나를 노출시킬 때, 가장 먼저 해야 할 일은 좋은 첫인상을 남기는 일이다.</div>
                   </span>
                 </div>
                 <!-- 요일 -->
                 <div>
                   <ul class="day_box">
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
-                    <li class="day">
-                      화
-                    </li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
+                    <li class="day">화</li>
                   </ul>
                 </div>
               </a>
@@ -280,7 +209,7 @@
       </div>
     </div>
   </main>
+  <!-- 푸터 -->
   <div id="footer"></div>
-  <!-- 메인 -->
 </body>
 </html> 
