--- a/webapp/header.html
+++ b/webapp/header.html
@@ -1,21 +1,27 @@
 <header id="site_header">
   <div>
     <span>
+      <!-- 로고 -->
       <a href="./../../main.html">
         <img src="./../../assets/img/main/logoP.png">
       </a>
     </span>
     <span>
+      <!-- 로그인 메뉴 -->
       <a href="./../login/login.html">
         로그인
       </a>
+      <!-- 회원가입 메뉴 -->
       <a href="./../sign/terms.html">
         회원가입
       </a>
     </span>
   </div>
+  <!-- 네비게이션 -->
   <nav>
+    <!-- 네비게이션 메뉴 리스트 -->
     <ul>
+      <!-- 지도메뉴 -->
       <li>
         <div>
           <a href="./../map/map.html">
@@ -30,6 +36,7 @@
           </a>
         </div>
       </li>
+      <!-- 음식점 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../restaurant/restaurant.html">
@@ -37,6 +44,7 @@
           </a>
         </div>
       </li>
+      <!-- 뉴스 게시판 메뉴 -->
       <li>
         <div>
           <a href="./../news/news.html">
@@ -44,6 +52,7 @@
           </a>
         </div>
       </li>
+      <!-- 일반 게시판 메뉴 -->
       <li>
         <div>
           <a href="./../post/postMain.html">
@@ -51,6 +60,7 @@
           </a>
         </div>
       </li>
+      <!-- 돌본 회원 리스트 메뉴 -->
       <li>
         <div>
           <a href="./../careMember/careMember.html">
