--- a/webapp/header_admin.html
+++ b/webapp/header_admin.html
@@ -1,12 +1,17 @@
 <header id="site_header_login">
   <div>
+    <!-- 헤더 왼쪽 메뉴 -->
     <span>
+      <!-- 로고 -->
       <a href="./app/admin/adminLogin.html">
         <img src="./assets/img/main/logoP.png">
       </a>
+      <!-- 관리자 표시(그냥 텍스트) -->
       <div class="admin_text">· 관리자</div>
     </span>
+    <!-- 헤더 오른쪽 메뉴 -->
     <span>
+      <!-- 로그아웃 메뉴 -->
       <a href="./app/admin/adminLogin.html">
         로그아웃
       </a>
