250814 17:58 강버들 주석 다는 중

--- a/webapp/app/careMember/careMember.html
+++ b/webapp/app/careMember/careMember.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>함께 걸음</title>
   <link rel="stylesheet" href="./../../assets/css/careMember/careMember.css">
-  <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+  <link rel="stylesheet" href="./../../assets/css/careMember/careMemberModal.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <script defer src="./../../assets/js/careMember/careMember.js"></script>
+  <script defer src="./../../assets/js/careMember/careMemberModalLogin.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -64,5 +65,6 @@
     </div>
   </main>
   <div id="footer"></div>
+  <div id="careMemberModalLogin"></div>
 </body>
 </html> 
