--- a/webapp/app/careMember/careMemberDetail.html
+++ b/webapp/app/careMember/careMemberDetail.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="./../../assets/css/careMember/careMemberModal.css">
   <script defer src="./../../assets/js/careMember/careMemberModal.js"></script>
+  <script defer src="./../../assets/js/careMember/careMemberModalLogin.js"></script>
 </head>
 
 <body>
@@ -206,6 +207,7 @@
   </main>
   <div id="footer"></div>
   <div id="modal"></div>
+  <div id="careMemberModalLogin"> </div>
 </body>
 
 </html>
