--- a/webapp/app/admin/refund.html
+++ b/webapp/app/admin/refund.html
@@ -42,6 +42,7 @@
               <div class="board_head board_name">신청자 명</div>
               <div class="board_head board_id">신청자 아이디</div>
               <div class="board_head board_date">신청 날짜</div>
+              <div class="board_head board_refund_date">환급 날짜</div>
               <div class="board_head board_type">환급 여부</div>
             </div>
             <div class="table_content">
@@ -50,6 +51,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -57,6 +59,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -64,6 +67,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
@@ -71,6 +75,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
@@ -78,6 +83,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -85,6 +91,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
           </div>
