--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -30,26 +30,31 @@
             <!-- 정보 내용 ul -->
             <ul class="info_content">
               <!-- 지역 제목 -->
-              <li class="info_title">오다리집 간장게장</li>
+              <li class="info_title">오다리집 간장게장</li><br>
               <!-- 지역 주소 -->
-              <li class="info_address">서울 강남구 논현로 94길 7 2층</li>
+              <li class="info_address"><img src="./../../assets/img/map/mapmarker.png" alt=""> 서울 강남구 논현로 94길 7 2층</li>
+              <br>
               <!-- 오픈 시간 -->
-              <li class="info_times">01:30에 라스트 오더
-                매일 : 09:20 ~ 02:00
-                01:30 라스트 오더</li>
+              <li class="info_times"><img src="./../../assets/img/map/clock.png" alt=""> 01:30에 라스트 오더<br>
+                <strong>&emsp;&emsp; 매일 : 09:20 ~ 02:00<br>
+                  &emsp; &emsp; 01:30 라스트 오더</strong>
+              </li><br>
               <!-- 장소 전화번호 -->
-              <li class="info_phonenum">0507-1350-6769</li>
+              <li class="info_phonenum"><img src="./../../assets/img/map/call.png" alt=""> 0507-1350-6769</li><br>
               <!-- 장소 상세(인터넷 유무, 배달 유무 등등...) -->
-              <li class="info_detail">배달, 포장, 무선 인터넷,
-                반려동물, 동반</li>
+              <li class="info_detail"><img src="./../../assets/img/map/market.png" alt=""> 배달, 포장, 무선 인터넷,
+                <br>&emsp;&emsp; 반려동물, 동반</li>
+              <!-- 찜 버튼 -->
+              <li id="wishbtn"><img src="./../../assets/img/map/star.png" alt=""> 찜버튼</li>
             </ul>
           </div>
-          <!-- 찜 버튼 -->
-          <div class="wishbtn">찜버튼</div>
         </div>
         <!-- 장소 상세설명 -->
-        <div class="map_detail">2021 GURUNAVI JAPAN 세계100대 레스토랑 오다리집 명동본점 선정 트립어드바이저 3년연속 서울 최우수식당 선정 L,XL 사이즈 1마리 생산지의
-          원가가 약 16000~25000 입니다 . 전국최저가격 최고 컬리티로 판매하고 있습니다.간장게장 매니아님들은 저희 ...</div>
+
+        <div class="map_detail">
+          <div class="detail_title">설명</div><br>
+          2021 GURUNAVI JAPAN 세계100대 레스토랑 오다리집 명동본점 선정 트립어드바이저 3년연속 서울 최우수식당 선정 L,XL 사이즈 1마리 생산지의...
+        </div>
       </div>
     </div>
   </main>
@@ -62,6 +67,16 @@
       <div class="modal_closebtn">&times;</div>
       <!-- 모달 내용 -->
       <div class="modal_text">로그인이 필요합니다.</div>
+    </div>
+  </article>
+  <!-- 모달창 -->
+  <article class="modalbox_complet">
+    <!-- 비로그인 시 체크 모달 -->
+    <div class="complet_modal">
+      <!-- 모달 닫기 버튼 -->
+      <div class="modal_closebtn_complet">&times;</div>
+      <!-- 모달 내용 -->
+      <div class="modal_text">찜하기 완료</div>
     </div>
   </article>
 </body>
